[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/orgprez/OrgPrezStepper.gd" type="Script" id=1]
[ext_resource path="res://fonts/FiraSansCondensed-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/jprez/Outline.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/jprez/jp-chunklist.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.235294, 0.301961, 1 )
border_width_left = 5
border_width_top = 32
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.141176, 0.396078, 0.568627, 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 3 )

[node name="JPrezStepper" type="WindowDialog"]
visible = true
margin_left = 1000.0
margin_top = 50.0
margin_right = 1800.0
margin_bottom = 1050.0
rect_min_size = Vector2( 500, 500 )
rect_clip_content = true
custom_styles/panel = SubResource( 1 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_constants/title_height = -32
popup_exclusive = true
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toolbar" type="HBoxContainer" parent="VBox"]
margin_right = 800.0
margin_bottom = 22.0

[node name="PlayButton" type="ToolButton" parent="VBox/toolbar"]
margin_right = 38.0
margin_bottom = 22.0
custom_colors/font_color_pressed = Color( 0.145098, 0.631373, 1, 1 )
toggle_mode = true
text = "play"

[node name="StepButton" type="ToolButton" parent="VBox/toolbar"]
margin_left = 42.0
margin_right = 82.0
margin_bottom = 22.0
text = "step"

[node name="spacer" type="Control" parent="VBox/toolbar"]
margin_left = 86.0
margin_right = 396.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="status" type="Label" parent="VBox/toolbar"]
margin_left = 400.0
margin_top = 1.0
margin_right = 800.0
margin_bottom = 21.0
rect_min_size = Vector2( 400, 20 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="navigator" type="HBoxContainer" parent="VBox"]
margin_top = 26.0
margin_right = 800.0
margin_bottom = 968.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Outline" parent="VBox/navigator" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.623529 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 942.0
rect_min_size = Vector2( 200, 200 )
size_flags_vertical = 3

[node name="ChunkList" parent="VBox/navigator" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.623529 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_right = 800.0
margin_bottom = 942.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBox/toolbar/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBox/toolbar/StepButton" to="." method="_on_StepButton_pressed"]
[connection signal="chunk_selected" from="VBox/navigator/ChunkList" to="." method="_on_ChunkList_chunk_selected"]
